[gd_scene load_steps=9 format=3 uid="uid://bw1surtfs5ftf"]

[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_ddwec"]
[ext_resource type="Texture2D" uid="uid://causd0nnl6d7b" path="res://assets/UI/heart.png" id="2_v8ncm"]
[ext_resource type="Texture2D" uid="uid://bopwad08axmmj" path="res://assets/images/01.png" id="3_m3h0t"]
[ext_resource type="Texture2D" uid="uid://db6grqxncul6l" path="res://assets/UI/shadedDark14.png" id="4_6imjq"]
[ext_resource type="Texture2D" uid="uid://bn1i0suswjy2p" path="res://assets/UI/shadedDark24.png" id="5_vc8no"]
[ext_resource type="Script" path="res://scenes/hud/mobile_controls.gd" id="5_w1vms"]
[ext_resource type="Texture2D" uid="uid://bfqgdnxxdb8e6" path="res://assets/UI/shadedDark25.png" id="6_d5pi8"]
[ext_resource type="Texture2D" uid="uid://b42fj8oyl6pe5" path="res://assets/UI/shadedDark26.png" id="8_qupnj"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ddwec")

[node name="TopBar" type="Control" parent="."]
layout_mode = 3
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 100.0
mouse_filter = 2

[node name="HealthContainer" type="HBoxContainer" parent="TopBar"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
offset_right = 100.0
offset_bottom = 64.0
theme_override_constants/separation = 10

[node name="HeartIcon" type="TextureRect" parent="TopBar/HealthContainer"]
custom_minimum_size = Vector2(76, 0)
layout_mode = 2
texture = ExtResource("2_v8ncm")
expand_mode = 1

[node name="HealthValue" type="Label" parent="TopBar/HealthContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "3
"

[node name="CoinContainer" type="HBoxContainer" parent="TopBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_right = 0.2
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 10

[node name="CoinIcon" type="TextureRect" parent="TopBar/CoinContainer"]
layout_mode = 2
texture = ExtResource("3_m3h0t")

[node name="CoinValue" type="Label" parent="TopBar/CoinContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="PauseButton" type="TextureButton" parent="TopBar"]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -68.0
offset_bottom = 77.0
grow_horizontal = 0
texture_normal = ExtResource("4_6imjq")
stretch_mode = 0

[node name="MobileControls" type="Control" parent="."]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
offset_bottom = -20.0
mouse_filter = 2
script = ExtResource("5_w1vms")

[node name="LeftButton" type="TextureButton" parent="MobileControls"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_top = 520.0
offset_right = 108.0
offset_bottom = -4.0
texture_normal = ExtResource("5_vc8no")
stretch_mode = 0

[node name="RightButton" type="TextureButton" parent="MobileControls"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_right = 0.15
anchor_bottom = 1.0
offset_left = -18.8
offset_top = 520.0
offset_right = 90.2
offset_bottom = -4.0
texture_normal = ExtResource("6_d5pi8")
stretch_mode = 0

[node name="JumpButton" type="TextureButton" parent="MobileControls"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -116.0
offset_top = 520.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("8_qupnj")
stretch_mode = 0
